# guangshanhuaqi

./: .gitignore  CMakeLists.txt  CMakePresets.json  MainWindow.cpp  MainWindow.h  PROJECT_OVERVIEW.md  README.md  RasterMath.h  RasterWidget.cpp  RasterWidget.h  SOFTWARE_RASTERIZER_ROADMAP.md  SoftwareRenderer.cpp  SoftwareRenderer.h  main.cpp
.github/workflows/: ci.yml
tests/: renderer_benchmark.cpp  tst_renderer.cpp
